Algumas alterações no css

--- a/templates/login.html
+++ b/templates/login.html
@@ -34,7 +34,7 @@
   <body>
     <div class="container">
       <div class="card card-container">
-        <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
+        <h3>Faça seu login</h3>
         <img
           id="profile-img"
           class="profile-img-card"
@@ -71,14 +71,14 @@
           />
           <div id="remember" class="checkbox">
             <label>
-              <input type="checkbox" value="remember-me" /> Remember me
+              <input type="checkbox" value="remember-me" /> lembrar senha
             </label>
           </div>
           <button
             class="btn btn-lg btn-primary btn-block btn-signin"
             type="submit"
           >
-            Sign in
+            Entrar
           </button>
         </form>
         <!-- /form -->
