--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,8 @@ html {
 }
 
 .card-container.card {
-  max-width: 350px;
+  top: 100px;
+  max-width: 400px;
   padding: 40px 40px;
 }
 
@@ -37,7 +38,13 @@ html {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
+.card h3 {
+  margin: 1rem;
+  font-weight: bold;
+}
+
 .profile-img-card {
+  top: 10px;
   width: 96px;
   height: 96px;
   margin: 0 auto 10px;
