--- a/templates/login.html
+++ b/templates/login.html
@@ -84,7 +84,7 @@
         <!-- /form -->
 
         <a href="#" class="forgot-password"> Esqueci minha senha. </a>
-        <a href="#" id="link1">Não possuo cadastro</a>
+        <a href="{{url_for('NovoCadastro')}}" id="link1">Não possuo cadastro</a>
       </div>
       <!-- /card-container -->
     </div>
