--- a/static/style.css
+++ b/static/style.css
@@ -90,7 +90,12 @@ html {
 .form-signin input[type="email"],
 .form-signin input[type="password"],
 .form-signin input[type="text"],
-.form-signin button {
+.form-signin button,
+.form-signin .form-control input[type="text"],
+#form-container .form-control {
+  border: none;
+  border-bottom: 1px solid #ccc;
+  border-radius: 1;
   width: 100%;
   display: block;
   margin-bottom: 10px;
@@ -151,4 +156,55 @@ html {
 #link1:active,
 #link1:focus {
   color: rgb(12, 97, 33);
+}
+/*--------------------------------*/
+
+/*Novo Cadastro*/
+#form-container {
+  background-color: #fff;
+  border-radius: none;
+  box-shadow: 0.5px 10px 15px rgba(0, 0, 0, 0.2);
+  margin: 25px auto;
+  padding: 25px;
+}
+
+@media (min-width: 768px) {
+  #form-container {
+    margin: 50px auto;
+    padding: 50px;
+  }
+}
+
+#form-container h3 {
+  font-weight: 900;
+  margin-bottom: 30px;
+}
+
+#form-container form {
+  padding-bottom: 10px;
+}
+
+
+#form-container .form-control:focus {
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+#form-container .form-floating label {
+  color: rgb(204, 204, 204);
+}
+
+#form-container .form-floating > .form-control:focus ~ label {
+  color: #222;
+}
+
+/*-------------*/
+/*imagem */
+.row.align-items-center {
+  align-content: center;
+  height: 100%;
+}
+
+#link-container {
+  text-align: center;
+  padding-top: 50px;
 }
