--- a/templates/Financa_Pessoal.html
+++ b/templates/Financa_Pessoal.html
@@ -5,8 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finanças Pessoais</title>
+
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <!--<link rel="stylesheet" href="static/style.css" />-->
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='estilo_pg_principal.css') }}"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
+    />
+
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>teste</h1>
+    <input type="checkbox" id="chec">
+    <label for="chec">
+        <i class="bi bi-list"></i>
+    </label>
+    <nav>
+        <ul>
+          <li><a href="Financa_Pessoal.html">HOME</a></li>
+          <li><a href="login.html">LOGIN</a></li>
+          <li><a href="#">teste3</a></li>
+          <li><a href="#">teste4</a></li>
+          <li><a href="#">teste5</a></li>
+        </ul>
+    </nav>
   </body>
 </html>
