--- a/static/estilo_pg_principal.css
+++ b/static/estilo_pg_principal.css
@@ -8,8 +8,10 @@ a {
   color: #000;
 }
 
-body {
+html, body {
   font-family: "arial";
+  height: 100%;
+  background-repeat: no-repeat;
   background-image: linear-gradient(#318bff, #87ceeb);
 }
 
@@ -22,43 +24,41 @@ ul {
   margin: 20px;
 }
 
-input[type="checkbox"]{
+input[type="checkbox"] {
   display: none;
 }
 
-nav{
-    background-color: #252525;
-    width: 350px;
-    left: -350px;
-    height: 100%;
-    position: absolute;
-    transition: all .5s;
+nav {
+  background-color: #252525;
+  width: 350px;
+  left: -350px;
+  height: 100%;
+  position: absolute;
+  transition: all 0.5s;
 }
 
-input[type="checkbox"]:checked ~ nav{
-    transform: translateX(350px);
-
+input[type="checkbox"]:checked ~ nav {
+  /*Quando o checkbox for acionado, ele vai fazer um evento no conteudo, no elemento nav*/
+  transform: translateX(350px);
 }
 
-ul{
-    top: 70px;
-    position: absolute;
-    width: 100%;
+ul {
+  top: 70px;
+  position: absolute;
+  width: 100%;
 }
 
-a{
-    display: block;
-    padding: 20px 5px;
-    color: #fff;
+a {
+  display: block;
+  padding: 20px 5px;
+  color: #fff;
 }
-a:hover{
-    background-color: rgb(12, 97, 33);
+a:hover {
+  background-color: rgb(12, 97, 33);
 }
 
-label{
-    padding: 15px;
-    position: absolute;
-    z-index: 1; /*faz com que o elemento fique na frente do outro*/
-
-
+label {
+  padding: 15px;
+  position: absolute;
+  z-index: 1; /*faz com que o elemento fique na frente do outro*/
 }
