melhoria na pag principal

--- a/templates/Financa_Pessoal.html
+++ b/templates/Financa_Pessoal.html
@@ -45,5 +45,59 @@
         <li><a href="#">teste5</a></li>
       </ul>
     </nav>
+    <div class="container">
+      <div class="header">
+        <div class="nav">
+          <div class="search">
+            <input type="text" placeholder="Pesquisar" />
+            <button type="submit"><i class="bi bi-search"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="content">
+        <div class="cards">
+          <div class="card">
+            <div class="box">
+              <h2>000000</h2>
+              <h3>teste</h3>
+            </div>
+            <div class="icon-design">
+              <!--<img src="{{ url_for('imagem', nome_arquivo='coin.svg') }}" />-->
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <h2>000000</h2>
+              <h3>teste</h3>
+            </div>
+            <div class="icon-design">
+              <i class="bi bi-coin" alt="Coin"></i>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <h2>000000</h2>
+              <h3>teste</h3>
+            </div>
+            <div class="icon-design">
+              <i class="bi bi-coin" alt="Coin"></i>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <h2>000000</h2>
+              <h3>teste</h3>
+            </div>
+            <div class="icon-design">
+              <i class="bi bi-coin" alt="Coin"></i>
+            </div>
+          </div>
+        </div>
+        <div class="content-ii"></div>
+      </div>
+    </div>
   </body>
 </html>
