--- a/static/style.css
+++ b/static/style.css
@@ -273,3 +273,94 @@ label {
   position: absolute;
   z-index: 1; /*faz com que o elemento fique na frente do outro*/
 }
+
+.container {
+  position: absolute;
+  right: 0;
+  width: 77vw;
+  height: 100vh;
+  background: #f1f1f1;
+}
+
+.container .header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 77vw;
+  height: 10vh;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 8px rgb(0, 0, 0, 2);
+}
+
+.container .header .nav {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container .header .nav .search {
+  flex: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container .header .nav .search input[type="text"] {
+  border: none;
+  background: #f1f1f1;
+  padding: 10px;
+  width: 50%;
+}
+.container .header .nav .search button {
+  width: 40px;
+  height: 40px;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container .header .nav .search button .bi-search {
+  font-size: 40px;
+  width: 30px;
+  height: 50px;
+}
+
+.container .content {
+  position: relative;
+  margin-top: 20vh;
+  min-height: 90vh;
+}
+.container .content .cards {
+  padding: 20px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.container .content .cards .card {
+  width: 250px;
+  height: 150px;
+  background: white;
+  margin: 20px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+  box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.container .content .cards .card .icon-design img {
+  width: 60px;
+  height: 60px;
+}
+
+.container .content .content-ii {
+  min-height: 60vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
