--- a/templates/Financa_Pessoal.html
+++ b/templates/Financa_Pessoal.html
@@ -68,31 +68,31 @@
 
           <div class="card">
             <div class="box">
-              <h2>000000</h2>
+              <h2>222222</h2>
               <h3>teste</h3>
             </div>
             <div class="icon-design">
-              <i class="bi bi-coin" alt="Coin"></i>
+              <!--<img src="{{ url_for('imagem', nome_arquivo='coin.svg') }}" />-->
             </div>
           </div>
 
           <div class="card">
             <div class="box">
-              <h2>000000</h2>
+              <h2>333333</h2>
               <h3>teste</h3>
             </div>
             <div class="icon-design">
-              <i class="bi bi-coin" alt="Coin"></i>
+              <!--<img src="{{ url_for('imagem', nome_arquivo='coin.svg') }}" />-->
             </div>
           </div>
 
           <div class="card">
             <div class="box">
-              <h2>000000</h2>
+              <h2>444444</h2>
               <h3>teste</h3>
             </div>
             <div class="icon-design">
-              <i class="bi bi-coin" alt="Coin"></i>
+              <!--<img src="{{ url_for('imagem', nome_arquivo='coin.svg') }}" />-->
             </div>
           </div>
         </div>
