--- a/static/style.css
+++ b/static/style.css
@@ -25,7 +25,7 @@ html {
  * Card component
  */
 .card {
-  background-color: #f7f7f7;
+  background-color: red;
   /* just in case there no content*/
   padding: 20px 25px 30px;
   margin: 0 auto 25px;
