--- a/templates/Financa_Pessoal.html
+++ b/templates/Financa_Pessoal.html
@@ -59,42 +59,34 @@
           <div class="card">
             <div class="box">
               <h2>000000</h2>
-              <h3>teste</h3>
+              <h3>Renda</h3>
             </div>
             <div class="icon-design">
-              <!--<img src="{{ url_for('imagem', nome_arquivo='coin.svg') }}" />-->
+              <img src="img/coin.svg" />
             </div>
           </div>
 
           <div class="card">
             <div class="box">
               <h2>222222</h2>
-              <h3>teste</h3>
+              <h3>Despesas</h3>
             </div>
             <div class="icon-design">
-              <!--<img src="{{ url_for('imagem', nome_arquivo='coin.svg') }}" />-->
+              <img src="img/wallet2.svg" />
             </div>
           </div>
 
           <div class="card">
             <div class="box">
               <h2>333333</h2>
-              <h3>teste</h3>
+              <h3>Extrato</h3>
             </div>
             <div class="icon-design">
-              <!--<img src="{{ url_for('imagem', nome_arquivo='coin.svg') }}" />-->
+              <img src="img/card-heading.svg" />
             </div>
           </div>
 
-          <div class="card">
-            <div class="box">
-              <h2>444444</h2>
-              <h3>teste</h3>
-            </div>
-            <div class="icon-design">
-              <!--<img src="{{ url_for('imagem', nome_arquivo='coin.svg') }}" />-->
-            </div>
-          </div>
+          
         </div>
         <div class="content-ii"></div>
       </div>
