--- a/static/style.css
+++ b/static/style.css
@@ -242,7 +242,7 @@ input[type="checkbox"] {
 nav {
   background-color: #252525;
   width: 350px;
-  left: -350px;
+/*  left: -350px;*/
   height: 100%;
   position: absolute;
   transition: all 0.5s;
@@ -342,7 +342,7 @@ label {
 }
 .container .content .cards .card {
   width: 250px;
-  height: 150px;
+  height: 300px;
   background: white;
   margin: 20px 10px;
   display: flex;
