--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
     <!--<link rel="stylesheet" href="static/style.css" />-->
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='style.css') }}"
+      href="{{ url_for('static', filename='login.css') }}"
     />
 
     <link
@@ -32,19 +32,7 @@
     ></script>
   </head>
   <body>
-    <input type="checkbox" id="chec" />
-    <label for="chec">
-      <i class="bi bi-list"></i>
-    </label>
-    <nav>
-      <ul>
-        <li><a href="{{ url_for('index')}}">HOME</a></li>
-        <li><a href="{{url_for('login')}}">LOGIN</a></li>
-        <li><a href="#">teste3</a></li>
-        <li><a href="#">teste4</a></li>
-        <li><a href="#">teste5</a></li>
-      </ul>
-    </nav>
+    
 
     <div class="container">
       <div class="card card-container">
