--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,7 @@ html {
   background-image: linear-gradient(#318bff, #87ceeb);
 }
 
+
 .card-container.card {
   top: 100px;
   max-width: 400px;
@@ -242,7 +243,7 @@ input[type="checkbox"] {
 nav {
   background-color: #252525;
   width: 350px;
-/*  left: -350px;*/
+  left: -350px;
   height: 100%;
   position: absolute;
   transition: all 0.5s;
@@ -276,7 +277,7 @@ label {
 
 .container {
   position: absolute;
-  right: 0;
+  right: 0px;
   width: 77vw;
   height: 100vh;
   
