--- a/templates/Financa_Pessoal.html
+++ b/templates/Financa_Pessoal.html
@@ -32,9 +32,9 @@
     ></script>
   </head>
   <body>
-    <input type="checkbox" id="chec" />
+   <!-- <input type="checkbox" id="chec" />-->
     <label for="chec">
-      <i class="bi bi-list"></i>
+     <!-- <i class="bi bi-list"></i>-->
     </label>
     <nav>
       <ul>
@@ -45,6 +45,18 @@
         <li><a href="#">teste5</a></li>
       </ul>
     </nav>
+    <div>
+      <!--<nav class="x">
+        <ul>
+          <li><a href="{{ url_for('index')}}">HOME</a></li>
+          <li><a href="{{url_for('login')}}">LOGIN</a></li>
+          <li><a href="#">teste3</a></li>
+          <li><a href="#">teste4</a></li>
+          <li><a href="#">teste5</a></li>
+        </ul>
+      </nav>
+    </div>-->
+
     <div class="container">
       <div class="header">
         <div class="nav">
@@ -58,7 +70,7 @@
         <div class="cards">
           <div class="card">
             <div class="box">
-              <h2>000000</h2>
+              <h2>1</h2>
               <h3>Renda</h3>
             </div>
             <div class="icon-design">
@@ -68,7 +80,7 @@
 
           <div class="card">
             <div class="box">
-              <h2>222222</h2>
+              <h2>2</h2>
               <h3>Despesas</h3>
             </div>
             <div class="icon-design">
@@ -78,7 +90,7 @@
 
           <div class="card">
             <div class="box">
-              <h2>333333</h2>
+              <h2>3</h2>
               <h3>Extrato</h3>
             </div>
             <div class="icon-design">
