--- a/templates/Novo_Cadastro.html
+++ b/templates/Novo_Cadastro.html
@@ -33,9 +33,9 @@
   </head>
 
   <body>
-    <input type="checkbox" id="chec" class="barra" />
+  <!--  <input type="checkbox" id="chec" class="barra" />-->
     <label for="chec" class="barra">
-      <i class="bi bi-list"></i>
+      <!--<i class="bi bi-list"></i>-->
     </label>
     <nav>
       <ul>
