--- a/templates/Novo_Cadastro.html
+++ b/templates/Novo_Cadastro.html
@@ -54,6 +54,7 @@
         <div class="col-md-6">
           <h3>Faça seu cadastro</h3>
           <form class="form-signin" method="post" action="/autenticar">
+            <input type="hidden" name="proxima2" value="{{proxima2}}">
             <span id="reauth-email" class="reauth-email"></span>
             <div class="form-floating mb-3">
               <input
@@ -97,6 +98,16 @@
                 id="password"
                 name="password"
                 placeholder="Digite sua senha"
+              />
+              <label for="password" class="form-label">Digite sua senha</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input
+                type="number"
+                class="form-control"
+                id="cpf"
+                name="cpf"
+                placeholder="Digite seu cpf"
               />
               <label for="password" class="form-label">Digite sua senha</label>
             </div>
