--- a/templates/Novo_Cadastro.html
+++ b/templates/Novo_Cadastro.html
@@ -33,7 +33,7 @@
   </head>
 
   <body>
-  <!--  <input type="checkbox" id="chec" class="barra" />-->
+    <!--  <input type="checkbox" id="chec" class="barra" />-->
     <label for="chec" class="barra">
       <!--<i class="bi bi-list"></i>-->
     </label>
@@ -47,14 +47,12 @@
       </ul>
     </nav>
 
-    
-
     <div class="container col-md-6" id="form-container">
       <div class="row">
         <div class="col-md-6">
           <h3>Faça seu cadastro</h3>
           <form class="form-signin" method="post" action="/autenticar">
-            <input type="hidden" name="proxima2" value="{{proxima2}}">
+            <input type="hidden" name="proxima2" value="{{proxima2}}" />
             <span id="reauth-email" class="reauth-email"></span>
             <div class="form-floating mb-3">
               <input
@@ -68,7 +66,7 @@
               />
               <label for="name" class="form-label">Digite seu nome</label>
             </div>
-            <div class="form-floating mb-3">
+            <!--<div class="form-floating mb-3">
               <input
                 type="text"
                 id="lastname"
@@ -80,7 +78,7 @@
               <label for="lastname" class="form-label"
                 >Digite seu sobrenome</label
               >
-            </div>
+            </div>-->
             <div class="form-floating mb-3">
               <input
                 type="email"
@@ -109,7 +107,7 @@
                 name="cpf"
                 placeholder="Digite seu cpf"
               />
-              <label for="password" class="form-label">Digite sua senha</label>
+              <label for="password" class="form-label">Digite seu CPF</label>
             </div>
 
             <button
