--- a/templates/login.html
+++ b/templates/login.html
@@ -54,7 +54,7 @@
           <input type="hidden" name="proxima" value="{{proxima}}" /> 
           <span id="reauth-email" class="reauth-email"></span>
           <input
-            type="email"
+            type="text"
             id="inputEmail"
             name="usuario"
             class="form-control"
