--- a/templates/Novo_Cadastro.html
+++ b/templates/Novo_Cadastro.html
@@ -39,11 +39,10 @@
     </label>
     <nav>
       <ul>
-        <li><a href="{{ url_for('index')}}" class="barra">HOME</a></li>
-        <li><a href="{{url_for('login')}}" class="barra">LOGIN</a></li>
-        <li><a href="#" class="barra">teste3</a></li>
-        <li><a href="#" class="barra">teste4</a></li>
-        <li><a href="#" class="barra">teste5</a></li>
+        <li><a href="{{ url_for('index')}}"><i class="bi bi-house-door-fill"></i>Dashboad</a></li>
+        <li><a href="{{url_for('login')}}"><i class="bi bi-door-open-fill"></i>LOGIN</a></li>
+        <li><a href="{{url_for('transacoes')}}"><i class="bi bi-arrow-up"></i>Transações</a></li>
+        <li><a href="{{url_for('poupanca')}}"><i class="bi bi-cursor-fill"></i>Poupanca</a></li>
       </ul>
     </nav>
 
