--- a/templates/transacoes.html
+++ b/templates/transacoes.html
@@ -38,7 +38,7 @@
                 
                 <div class="card">
                     <h2 class="text-center mb-4">Faça sua transação</h2>
-                    <form class="form-card" onsubmit="event.preventDefault()">
+                    <form class="form-card" >
                         <div class="row justify-content-between text-left">
                             <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Titulo<span class="text-danger"> *</span></label> <input type="text" id="titulo" name="fname" placeholder="Titulo" > </div>
                             <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Valor<span class="text-danger"> *</span></label> <input type="number" id="valor" name="lname" placeholder="Valor"> </div>
