--- a/templates/Financa_Pessoal.html
+++ b/templates/Financa_Pessoal.html
@@ -32,21 +32,17 @@
     ></script>
   </head>
   <body>
-   <!-- <input type="checkbox" id="chec" />-->
-    
     <nav>
       
       <ul>
-        <li><a href="{{ url_for('index')}}">Dashboad</a></li>
-        <li><a href="{{url_for('login')}}">LOGIN</a></li>
-        <li><a href="{{url_for('transacoes')}}">Transações</a></li>
-        <li><a href="{{url_for('poupanca')}}">Poupanca</a></li>
-        <li><a href="#">teste5</a></li>
+        <li><a href="{{ url_for('index')}}"><i class="bi bi-house-door-fill"></i>Dashboard</a></li>
+        <li><a href="{{url_for('login')}}"><i class="bi bi-door-open-fill"></i>LOGIN</a></li>
+        <li><a href="{{url_for('transacoes')}}"><i class="bi bi-arrow-up"></i>Transações</a></li>
+        <li><a href="{{url_for('poupanca')}}"><i class="bi bi-cursor-fill"></i>Poupanca</a></li>
+        
       </ul>
     </nav>
-    <div>
-      
-
+    
     <div class="container">
       <div class="header">
         <div class="nav">
@@ -56,44 +52,55 @@
           </div>
         </div>
       </div>
-      <div class="content">
-        <div class="cards">
-          <div class="card">
-            <div class="box">
-              <h2>Total</h2>
+      <main>
+        <div class="content">
+          <div class="cards ">
+            <div class="card col-md-4">
+              <div class="box">
+                <h2>Total</h2>
+              </div>
+              <div class="icon-design">
+                <img src="img/coin.svg" />
+              </div>
             </div>
-            <div class="icon-design">
-              <img src="img/coin.svg" />
+  
+            <div class="card">
+              <div class="box">
+                <h2>Entradas</h2>
+               
+              </div>
+              <div class="icon-design">
+                <img src="img/wallet2.svg" />
+              </div>
             </div>
-          </div>
-
-          <div class="card">
-            <div class="box">
-              <h2>Entradas</h2>
-             
+  
+            <div class="card">
+              <div class="box">
+                <h2>Saidas</h2>
+                
+              </div>
+              <div class="icon-design">
+                <img src="img/card-heading.svg" />
+              </div>
             </div>
-            <div class="icon-design">
-              <img src="img/wallet2.svg" />
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="box">
-              <h2>Saidas</h2>
+            <div class="card col-md-12">
               
             </div>
-            <div class="icon-design">
-              <img src="img/card-heading.svg" />
-            </div>
-          </div>
-          <div class="card col-md-12">
+  
             
           </div>
-
-          
+          <div class="content-ii"></div>
         </div>
-        <div class="content-ii"></div>
-      </div>
+
+        <div class="container-fluid px-1 py-5 mx-auto">
+          <div class="row d-flex justify-content-center">
+              <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
+                   
+              </div>
+            </div>
+          </div>
+      </main>
+      
     </div>
   </body>
 </html>
