--- a/templates/transacoes.html
+++ b/templates/transacoes.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='transacao.css') }}"
     />
+    <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css') }}">
 
     <link
       rel="stylesheet"
@@ -32,12 +33,28 @@
     ></script>
 </head>
 <body>
+    <div class="side-menu">
+      <div class="brand-name">
+        <h1>Finanças S.A</h1>
+      </div>
+      <ul>
+        <li>
+          <a href="{{ url_for('index')}}"
+            ><img src="img/dashboard (2).png" />&nbsp;Inicio</a
+          >
+        </li>
+        <li><a href="{{url_for('transacoes')}}">&nbsp;Transações</a></li>
+        <li><a href="{{url_for('poupanca')}}">&nbsp;Poupança</a></li>
+      </ul>
+    </div>
+
+
     <div class="container-fluid px-1 py-5 mx-auto">
         <div class="row d-flex justify-content-center">
             <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-                
+                    
                 <div class="card">
-                    <h2 class="text-center mb-4">Faça sua transação</h2>
+                    <h2 class="preto">Faça sua transação</h2>
                     <form class="form-card" >
                         <div class="row justify-content-between text-left">
                             <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Titulo<span class="text-danger"> *</span></label> <input type="text" id="titulo" name="fname" placeholder="Titulo" > </div>
@@ -59,22 +76,22 @@
                         </div>
                         <div class="row justify-content-between text-left">
                             <div class="form-group col-sm-6 flex-column d-flex"> 
-                               <button class="btn btn-success">
+                               <button class="btn btn-green">
                                 <i class="bi bi-arrow-up"></i>Entrada
                                </button>
                               </div>
                               <div class="form-group col-sm-6 flex-column d-flex"> 
-                                   <button class="btn btn-danger">
+                                   <button class="btn btn-red">
                                     <i class="bi bi-arrow-down"></i> Saida
                                 </button>
                                </div>
                                <div class="form-group col-sm-6 flex-column d-flex"> 
-                                <button class="btn btn-danger">
+                                <button class="btn btn-red">
                                  <i class="bi bi-x"></i>Cancelar
                                 </button>
                                </div>
                                <div class="form-group col-sm-6 flex-column d-flex"> 
-                                    <button class="btn btn-success">
+                                    <button class="btn btn-green">
                                      <i class="bi bi-check"></i> Criar
                                  </button>
                                 </div>
