--- a/templates/Novo_Cadastro.html
+++ b/templates/Novo_Cadastro.html
@@ -39,10 +39,26 @@
     </label>
     <nav>
       <ul>
-        <li><a href="{{ url_for('index')}}"><i class="bi bi-house-door-fill"></i>Dashboad</a></li>
-        <li><a href="{{url_for('login')}}"><i class="bi bi-door-open-fill"></i>LOGIN</a></li>
-        <li><a href="{{url_for('transacoes')}}"><i class="bi bi-arrow-up"></i>Transações</a></li>
-        <li><a href="{{url_for('poupanca')}}"><i class="bi bi-cursor-fill"></i>Poupanca</a></li>
+        <li>
+          <a href="{{ url_for('index')}}"
+            ><i class="bi bi-house-door-fill"></i>Dashboad</a
+          >
+        </li>
+        <li>
+          <a href="{{url_for('login')}}"
+            ><i class="bi bi-door-open-fill"></i>LOGIN</a
+          >
+        </li>
+        <li>
+          <a href="{{url_for('transacoes')}}"
+            ><i class="bi bi-arrow-up"></i>Transações</a
+          >
+        </li>
+        <li>
+          <a href="{{url_for('poupanca')}}"
+            ><i class="bi bi-cursor-fill"></i>Poupanca</a
+          >
+        </li>
       </ul>
     </nav>
 
@@ -50,7 +66,7 @@
       <div class="row">
         <div class="col-md-6">
           <h3>Faça seu cadastro</h3>
-          
+
           <form class="form-signin" method="post" action="/salvarUsuario">
             <input type="hidden" name="proxima2" value="{{proxima2}}" />
             <span id="reauth-email" class="reauth-email"></span>
@@ -66,7 +82,8 @@
               />
               <label for="name" class="form-label">Digite seu nome</label>
             </div>
-            <!--<div class="form-floating mb-3">
+
+            <div class="form-floating mb-3">
               <input
                 type="text"
                 id="lastname"
@@ -78,7 +95,22 @@
               <label for="lastname" class="form-label"
                 >Digite seu sobrenome</label
               >
-            </div>-->
+            </div>
+
+            <div class="form-floating mb-3">
+              <input
+                type="text"
+                id="username"
+                name="username"
+                class="form-control"
+                placeholder="Digite seu nome de usuário"
+                required
+              />
+              <label for="username" class="form-label"
+                >Digite seu nome de usuário</label
+              >
+            </div>
+
             <div class="form-floating mb-3">
               <input
                 type="email"
@@ -98,16 +130,6 @@
                 placeholder="Digite sua senha"
               />
               <label for="password" class="form-label">Digite sua senha</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input
-                type="number"
-                class="form-control"
-                id="cpf"
-                name="cpf"
-                placeholder="Digite seu cpf"
-              />
-              <label for="password" class="form-label">Digite seu CPF</label>
             </div>
 
             <button
