--- a/templates/Novo_Cadastro.html
+++ b/templates/Novo_Cadastro.html
@@ -67,7 +67,7 @@
         <div class="col-md-6">
           <h3>Faça seu cadastro</h3>
 
-          <form class="form-signin" method="post" action="/salvarUsuario">
+          <form class="form-signin" method="POST" action="/salvarUsuario">
             <input type="hidden" name="proxima2" value="{{proxima2}}" />
             <span id="reauth-email" class="reauth-email"></span>
             <div class="form-floating mb-3">
