--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -108,6 +108,16 @@ td {
   height: 100vh;
   background: #f1f1f1;
 }
+.container .jx {
+  position: absolute;
+  flex: 2;
+  background: #fff;
+  max-height: 50vh;
+  margin: 0 25px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: flex;
+  flex-direction: column;
+}
 
 .container .header {
   position: fixed;
