--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
+    
 
     <!-- CSS only -->
     <link
@@ -42,16 +43,9 @@
         />
 
         <p id="profile-name" class="profile-name-card"></p>
-        {% with messages = get_flashed_messages() %} {% if messages %}
-        <ul id="messages" class="list-unstyled">
-          {% for message in messages %}
-          <li class="alert alert-success">{{ message }}</li>
-          {% endfor %}
-        </ul>
-        {% endif %} {% endwith %}
 
         <form class="form-signin" method="post" action="/autenticar">
-          <input type="hidden" name="proxima" value="{{proxima}}" /> 
+          <input type="hidden" name="proxima" value="{{proxima}}" />
           <span id="reauth-email" class="reauth-email"></span>
           <input
             type="text"
@@ -70,11 +64,11 @@
             placeholder="Senha"
             required
           />
-          <div id="remember" class="checkbox">
+          <!-- <div id="remember" class="checkbox">
             <label>
               <input type="checkbox" value="remember-me" /> lembrar senha
             </label>
-          </div>
+          </div> -->
           <button
             class="btn btn-lg btn-primary btn-block btn-signin"
             type="submit"
@@ -84,9 +78,9 @@
         </form>
         <!-- /form -->
 
-        <a href="#" class="forgot-password" id="sombra2">
+        <!-- <a href="#" class="forgot-password" id="sombra2">
           Esqueci minha senha.
-        </a>
+        </a> -->
         <a href="{{url_for('registro')}}" id="sombra3">Não possuo cadastro</a>
       </div>
       <!-- /card-container -->
