--- a/templates/poupanca.html
+++ b/templates/poupanca.html
@@ -75,9 +75,12 @@
                         </div>
                         <div class="row justify-content-between text-left">
                             
-                               <div class="form-group col-sm-6 flex-column d-flex"> 
+                               <div class="form-group col-sm-6 flex-column d-flex">
+                                 
+                                   
+                                 
                                 <button class="btn btn-red">
-                                 <i class="bi bi-x"></i>Cancelar
+                                  <a id="branco" href="{{ url_for('index')}}"><i class="bi bi-x"></i>Cancelar</a> 
                                 </button>
                                </div>
                                <div class="form-group col-sm-6 flex-column d-flex"> 
