--- a/templates/transacoes.html
+++ b/templates/transacoes.html
@@ -54,7 +54,11 @@
             <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
                     
                 <div class="card">
+                  <!-- {% if sucesso %}
+                        <p class=error><strong>Error: </strong> {{ sucesso }}
+                    {% endif %} -->
                     <h2 class="preto">Faça sua transação</h2>
+                    
                     <form class="form-card" >
                         <div class="row justify-content-between text-left">
                             <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Titulo<span class="text-danger"> *</span></label> <input type="text" id="titulo" name="fname" placeholder="Titulo" > </div>
