--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -10,6 +10,20 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='dashboard.css') }}"
     />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -60,15 +74,20 @@
         </div>
       </div>
 
-      {% with messages = get_flashed_messages() %} {% if messages %}
-      <ul id="messages" class="list-unstyled">
-        {% for message in messages %}
-        <li class="alert alert-success">{{ message }}</li>
-        {% endfor %}
-      </ul>
-      {% endif %} {% endwith %}
 
       <div class="content">
+        
+      {% with messages = get_flashed_messages() %} 
+      {% if messages %}
+      <ul id="messages" class="list-unstyled">
+        {% for message in messages %}
+        <li class="alert alert-success alert-dismissible fade show" role="alert" >{{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+       {% endwith %}
         <div class="cards">
           <div class="card">
             <div class="box">
