--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,19 @@
     <div class="container">
       
       <div class="card card-container">
+        {% with error = get_flashed_messages() %} 
+        {% if error %}
+        <ul id="error" class="list-unstyled">
+         
+          <li class="alert alert-success alert-dismissible fade show" role="alert" >{{error}}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </li>
+          
+        </ul>
+        {% endif %}
+         {% endwith %}
         <h3>Faça seu login</h3>
+       
         <img
           id="profile-img"
           class="profile-img-card"
@@ -55,7 +67,7 @@
             id="inputEmail"
             name="usuario"
             class="form-control"
-            placeholder="Email"
+            placeholder="Digite seu email"
             required
             autofocus
           />
