--- a/templates/Novo_Cadastro.html
+++ b/templates/Novo_Cadastro.html
@@ -98,7 +98,7 @@
               >
             </div>
 
-            <div class="form-floating mb-3">
+            <!-- <div class="form-floating mb-3">
               <input
                 type="text"
                 id="username"
@@ -110,7 +110,7 @@
               <label for="username" class="form-label"
                 >Digite seu nome de usuário</label
               >
-            </div>
+            </div> -->
 
             <div class="form-floating mb-3">
               <input
