--- a/templates/transacoes.html
+++ b/templates/transacoes.html
@@ -40,11 +40,22 @@
       <ul>
         <li>
           <a href="{{ url_for('index')}}"
-            ><img src="img/dashboard (2).png" />&nbsp;Inicio</a
+            ><img src="img/house-door-fill.svg" />&nbsp;Inicio</a
           >
         </li>
-        <li><a href="{{url_for('transacoes')}}">&nbsp;Transações</a></li>
-        <li><a href="{{url_for('poupanca')}}">&nbsp;Poupança</a></li>
+        <li>
+          <a href="{{url_for('transacoes')}}"
+            ><img src="img/arrow-up(1).svg" />&nbsp;Transações</a
+          >
+        </li>
+        <li>
+          <a href="{{url_for('poupanca')}}"
+            ><img src="img/person-fill.svg" />&nbsp;Poupança</a
+          >
+        </li>
+        <li>
+          <a href="#"><img src="img/person-fill.svg" />&nbsp;Minha conta</a>
+        </li>
       </ul>
     </div>
 
