--- a/templates/poupanca.html
+++ b/templates/poupanca.html
@@ -32,6 +32,7 @@
       crossorigin="anonymous"
     ></script>
 </head>
+{% block conteudo %}
 <body>
 
     <div class="side-menu">
@@ -39,13 +40,24 @@
         <h1>Finanças S.A</h1>
       </div>
       <ul>
-        <li>
+         <li>
           <a href="{{ url_for('index')}}"
-            ><img src="img/dashboard (2).png" />&nbsp;Inicio</a
+            ><img src="img/house-door-fill.svg" />&nbsp;Inicio</a
           >
         </li>
-        <li><a href="{{url_for('transacoes')}}">&nbsp;Transações</a></li>
-        <li><a href="{{url_for('poupanca')}}">&nbsp;Poupança</a></li>
+        <li>
+          <a href="{{url_for('transacoes')}}"
+            ><img src="img/arrow-up(1).svg" />&nbsp;Transações</a
+          >
+        </li>
+        <li>
+          <a href="{{url_for('poupanca')}}"
+            ><img src="img/person-fill.svg" />&nbsp;Poupança</a
+          >
+        </li>
+        <li>
+          <a href="#"><img src="img/person-fill.svg" />&nbsp;Minha conta</a>
+        </li>
       </ul>
     </div>
 
@@ -54,7 +66,7 @@
             <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
                 
                 <div class="card">
-                    <h2 class="text-center mb-2 preto">Crie o item da sua poupança</h2>
+                    <h2 class="text-center mb-2 preto">{{ titulo }}</h2>
                     <form class="form-card" >
                         <div class="row justify-content-between text-left">
                             <div class="form-group col-sm-6 flex-column d-flex">
@@ -93,6 +105,6 @@
             </div>
         </div>
     </div>
-    
+    {%endblock %}
 </body>
 </html>
