--- a/templates/transacoes.html
+++ b/templates/transacoes.html
@@ -45,16 +45,21 @@
         </li>
         <li>
           <a href="{{url_for('transacoes')}}"
-            ><img src="img/arrow-up(1).svg" />&nbsp;Transações</a
+            ><img src="img/arrow-up (1).svg"  />&nbsp;Transações</a
           >
         </li>
         <li>
           <a href="{{url_for('poupanca')}}"
-            ><img src="img/person-fill.svg" />&nbsp;Poupança</a
+            ><img src="img/person-fill.svg" />&nbsp;Inserir Saldo</a
           >
         </li>
         <li>
           <a href="#"><img src="img/person-fill.svg" />&nbsp;Minha conta</a>
+        </li>
+        <li>
+          <a href="{{url_for('logout')}}"
+            ><img src="img/x-lg.svg" />&nbsp;Sair</a
+          >
         </li>
       </ul>
     </div>
