--- a/templates/poupanca.html
+++ b/templates/poupanca.html
@@ -75,13 +75,20 @@
                     <form class="form-card" >
                         <div class="row justify-content-between text-left">
                             <div class="form-group col-sm-6 flex-column d-flex">
-                                 <label class="form-control-label px-3">Titulo<span class="text-danger"> *</span></label> 
-                                 <input type="text" id="titulo"  placeholder="Titulo" > 
+                                 <label for="x" class="form-control-label px-3">Tipo<span class="text-danger"> *</span></label> 
+                                <select name="x" id="x">
+                                  <option value="fixa">Fixa</option>
+                                  <option value="extra">Extra</option>
+                                </select>
+
+
+
+                                 
                             </div>
 
                             <div class="form-group col-sm-6 flex-column d-flex"> 
                                 <label class="form-control-label px-3">Quantia disponível<span class="text-danger"> *</span></label> 
-                                <input type="number" id="valor2"  placeholder="Digite um valor"> </div>
+                                <input type="text" id="valor2"  placeholder="Digite um valor"> </div>
                         </div>
 
                         <!-- <div class="row justify-content-between text-left">
