--- a/templates/Saldo.html
+++ b/templates/Saldo.html
@@ -51,7 +51,10 @@
           >
         </li>
         <li>
-          <a href="{{url_for('poupanca')}}"
+          <a href="{{url_for('despesas')}}"><img src="" />&nbsp;Despesas</a>
+        </li>
+        <li>
+          <a href="{{url_for('saldo')}}"
             ><img src="img/person-fill.svg" />&nbsp;Inserir Saldo</a
           >
         </li>
@@ -72,23 +75,20 @@
                 
                 <div class="card">
                     <h2 class="text-center mb-2 preto">{{ titulo }}</h2>
-                    <form class="form-card" >
+                    <form class="form-card" method="POST" action="/salvarSaldo">
                         <div class="row justify-content-between text-left">
                             <div class="form-group col-sm-6 flex-column d-flex">
-                                 <label for="x" class="form-control-label px-3">Tipo<span class="text-danger"> *</span></label> 
-                                <select name="x" id="x">
-                                  <option value="fixa">Fixa</option>
-                                  <option value="extra">Extra</option>
-                                </select>
-
-
-
-                                 
+                                 <label  class="form-control-label px-3">Tipo<span class="text-danger"> *</span></label>
+                                  <input list="x" type="text" id="tipo" name="tipo"  placeholder="Fixa ou Extra">
+                                <datalist  id="x">
+                                  <option value="Fixa"></option>
+                                  <option value="Extra"></option>
+                                </datalist>
                             </div>
 
                             <div class="form-group col-sm-6 flex-column d-flex"> 
-                                <label class="form-control-label px-3">Quantia disponível<span class="text-danger"> *</span></label> 
-                                <input type="text" id="valor2"  placeholder="Digite um valor"> </div>
+                                <label class="form-control-label px-3">Valor<span class="text-danger"> *</span></label> 
+                                <input type="text" id="valor" name="valor"  placeholder="Digite um valor"> </div>
                         </div>
 
                         <!-- <div class="row justify-content-between text-left">
@@ -97,9 +97,7 @@
                                 <input type="number" id="qtotal" name="categoria" placeholder="Quantia total"> 
                             </div> -->
                                  
-                            
-                        </div>
-                        <div class="row justify-content-between text-left">
+                          <div class="row justify-content-between text-left">
                             
                                <div class="form-group col-sm-6 flex-column d-flex">
                                  
@@ -114,8 +112,10 @@
                                      <i class="bi bi-check"></i> Criar
                                  </button>
                                 </div>
-                                             </form>
-                </div>
+                               </form>
+                 
+                          </div>
+                         </div>
             </div>
         </div>
     </div>
