--- a/templates/despesas.html
+++ b/templates/despesas.html
@@ -10,6 +10,14 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='dashboard.css') }}"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='transacao.css') }}"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -17,6 +25,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    
     <script src="{{ url_for('static', filename='jquery-3.6.0.js') }}"></script>
     <script src="{{ url_for('static', filename='teste.js') }}"></script>
 
@@ -26,6 +35,9 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="{{ url_for('static', filename='jquery-3.6.0.js') }}"></script>
+    <script src="{{ url_for('static', filename='teste.js') }}"></script>
+    <script src="{{ url_for('static', filename='jquery.mask.js') }}"></script>
 </head>
 <body>
     <div class="side-menu">
@@ -44,7 +56,10 @@
             >
           </li>
           <li>
-            <a href="{{url_for('poupanca')}}"
+          <a href="{{url_for('despesas')}}"><img src="" />&nbsp;Despesas</a>
+        </li>
+          <li>
+            <a href="{{url_for('saldo')}}"
               ><img src="img/person-fill.svg" />&nbsp;Poupança</a
             >
           </li>
@@ -65,44 +80,57 @@
                   
                   <div class="card">
                       <h2 class="text-center mb-2 preto">{{ titulo }}</h2>
-                      <form class="form-card" >
+                      <form class="form-card" method="POST" action="/salvarDespesas" >
                           <div class="row justify-content-between text-left">
-                              <div class="form-group col-sm-6 flex-column d-flex">
-                                   <label class="form-control-label px-3">Titulo<span class="text-danger"> *</span></label> 
-                                   <input type="text" id="titulo"  placeholder="Titulo" > 
-                              </div>
-                              <div class="form-group col-sm-6 flex-column d-flex"> 
-                                  <label class="form-control-label px-3">Quantia disponível<span class="text-danger"> *</span></label> 
-                                  <input type="number" id="valor2"  placeholder="Digite um valor"> </div>
-                          </div>
-                          <div class="row justify-content-between text-left">
-                              <div class="form-group col-sm-12 flex-column d-flex"> 
-                                  <label class="form-control-label px-3">Quantia total<span class="text-danger"> *</span></label> 
-                                  <input type="number" id="qtotal" name="categoria" placeholder="Quantia total"> 
-                              </div>
-                                   
-                              
-                          </div>
-                          <div class="row justify-content-between text-left">
-                              
-                                 <div class="form-group col-sm-6 flex-column d-flex">
-                                   
-                                     
-                                   
+                            <div class="form-group col-sm-6 flex-column d-flex">
+                                 <label  class="form-control-label px-3">Tipo<span class="text-danger"> *</span></label>
+                                  <input list="x" type="text" id="tipo" name="tipo"  placeholder="Fixa ou Extra">
+                                <datalist  id="x">
+                                  <option value="0">Passeio</option>
+                                  <option value="1">Conta de água</option>
+                                  <option value="2">Conta de luz</option>
+                                  <option value="3">Internet</option>
+                                  <option value="4">Feira do mês</option>
+                                  <option value="5">Outros...</option>
+                                </datalist>
+                            </div>
+
+                            <div class="form-group col-sm-6 flex-column d-flex"> 
+                                <label class="form-control-label px-3">Valor<span class="text-danger"> *</span></label> 
+                                <input type="text" id="valor" name="valor"  placeholder="Digite um valor"> </div>
+                        </div>
+                        
+                        <div class="form-group col-sm-6 flex-column d-flex"> 
+                                <label class="form-control-label px-3">Data de pagamento<span class="text-danger"> *</span></label> 
+                                <input type="date" id="data" name="data"  placeholder="Data de pagamento"> </div>
+                         <div class="row justify-content-between text-left">
+                            
+                                <div class="form-group col-sm-6 flex-column d-flex">
+                                                                          
                                   <button class="btn btn-red">
-                                    <a id="branco" href="{{ url_for('index')}}"><i class="bi bi-x"></i>Cancelar</a> 
+                                    <a  href="{{ url_for('index')}}"><i class="bi bi-x"></i>Cancelar</a> 
                                   </button>
-                                 </div>
-                                 <div class="form-group col-sm-6 flex-column d-flex"> 
+                                </div>
+                                <div class="form-group col-sm-6 flex-column d-flex"> 
                                       <button class="btn btn-green">
-                                       <i class="bi bi-check"></i> Criar
-                                   </button>
+                                      <i class="bi bi-check"></i> Criar
+                                  </button>
                                   </div>
-                                               </form>
+                     </form>
                   </div>
+                              </div>
+                        
+
+                        <!-- <div class="row justify-content-between text-left">
+                            <div class="form-group col-sm-12 flex-column d-flex"> 
+                                <label class="form-control-label px-3">Quantia total<span class="text-danger"> *</span></label> 
+                                <input type="number" id="qtotal" name="categoria" placeholder="Quantia total"> 
+                            </div> -->
+                                 
+                         
               </div>
           </div>
       </div>
-      {%endblock %}
+    
 </body>
 </html>
