--- a/templates/transacoes.html
+++ b/templates/transacoes.html
@@ -49,7 +49,10 @@
           >
         </li>
         <li>
-          <a href="{{url_for('poupanca')}}"
+          <a href="{{url_for('despesas')}}"><img src="" />&nbsp;Despesas</a>
+        </li>
+        <li>
+          <a href="{{url_for('saldo')}}"
             ><img src="img/person-fill.svg" />&nbsp;Inserir Saldo</a
           >
         </li>
